加密解密/敏感词过滤

--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@
 			<artifactId>javax.mail-api</artifactId>
 			<version>1.5.6</version>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
 
 		<!-- excel star-->
 		<dependency>
