敏感词过滤

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,8 @@ server.context-path=/sbapi
 logging.level.root=error
 
 #\u6570\u636E\u6E90#
-spring.datasource.url=jdbc:mysql://39.106.119.67:3306/shopmall?useUnicode=true&amp;&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://39.106.119.67:3306/shopmall?useUnicode=true&amp;&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://39.106.119.67:3306/myself?useUnicode=true&amp;&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=Liyh0628
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
