敏感词过滤

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,13 @@ spring.datasource.hikari.idle-timeout= 600000
 spring.datasource.hikari.max-lifetime= 1800000
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxOpenPreparedStatements=15
+
+
+#redis\u914D\u7F6E
+redis.server.host=127.0.0.1
+redis.server.port=6379
+redis.server.password=root
+redis.server.timeOut=1000
+redis.server.maxIdle=10
+redis.server.maxWaitMillis=500
+redis.server.maxTotal=100
