--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,13 @@
 			<artifactId>jedis</artifactId>
 			<version>2.9.0</version>
 		</dependency>
-
+		<!-- 汉字转拼音start -->
+		<dependency>
+			<groupId>com.github.stuxuhai</groupId>
+			<artifactId>jpinyin</artifactId>
+			<version>1.1.8</version>
+		</dependency>
+		<!-- 汉字转拼音end -->
 		<!-- excel star-->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -204,7 +210,24 @@
 			<version>5.3.2</version>
 		</dependency>
 		<!-- Elasticsearch end -->
+		<!-- lucene 核心模块  -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>7.3.0</version>
+		</dependency>
 
+		<dependency>
+			<groupId>com.janeluo</groupId>
+			<artifactId>ikanalyzer</artifactId>
+			<version>2012_u6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apdplat</groupId>
+			<artifactId>word</artifactId>
+			<version>1.3</version>
+		</dependency>
 
 	</dependencies>
 
