IKAnalyzer 中文分词 词频统计

--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,7 @@
 			<version>7.3.0</version>
 		</dependency>
 
+		<!-- ikanalyzer分词 -->
 		<dependency>
 			<groupId>com.janeluo</groupId>
 			<artifactId>ikanalyzer</artifactId>
